--- a/分次.html
+++ b/分次.html
@@ -5,7 +5,7 @@
     <title>个人网站</title>
   </head> 
   <body>
-   <img src="./QQ920201224013043.jpg" />
+   <img src="./tupian.jpg" />
   <h1>欢迎访问</h1>
   </body>
  </html>
